force-app/main/default/objects/Risk_Signal__c/Risk_Signal__c.object-meta.xml
<CustomObject>
    <label>Risk Signal</label>
    <nameField>
        <displayFormat>RS-{0000000}</displayFormat>
        <label>Risk Signal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Signals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>