force-app/main/default/objects/Risk_Signal__c/fields/Signal_Name__c.field-meta.xml
<CustomField>
    <fullName>Signal_Name__c</fullName>
    <label>Signal Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>